-----------------------------------------------------------------------------------------
	$Id: ChangeLog,v 1.651 2009-11-06 06:48:35 guru Exp $
-----------------------------------------------------------------------------------------

2009-11-05	pwessel
	* imgsrc/img2google:	One gmtmath call did not have -Q

2009-11-02	pwessel
	* mapproject.c:		The -S option failed after i/o makeover.
	
2009-10-28	remko
	* pslib.c:		Bug fix: memory never got freed by ps_free.

2009-10-23	remko
	* config.mk.in, common.mk: Replaced makegmt.macros by config.mk
				Replaced gmtalldeps.macros by common.mk
	* All makefiles:	Improved handling of libs in Makefiles

2009-10-15	pwessel
	* x2sys.c:		x2sys_pick_fields should NOT reset x_col, y_col, t_col as
				these indicate which input columns hold x, y, t.
	* x2sys/x2sys_datalist.c:	Confusion between input order and output order when
				the -F<list> option was used.

2009-10-15	jluis
	* gmt_customio.c:	Fixed bug resulting from releasing the pointer to from_gdalread
				structure before its members.
	* gmt_gdalread.c:	Force computation of min/max since metadata info may be wrong

2009-10-14	remko
	* grdtrend.c:		Explicitly set pstuff[0] = 1 and use it in loops.

2009-10-12	pwessel
	* gmt_plot.c:		qsort of GMT_LONGs passed ints

2009-10-11	pwessel
	* misc/kml2gmt.c:	Mix of fopen and GMT_fclose not good under Windoze

2009-10-09	pwessel
	* gmtinit.c:		If GMT_DATADIR was set to a list of colon-separated dirs
				then then init failed since we tried to check access as
				if GMT_DATADIR was always a single entity (as in the past).

2009-10-06	remko
	* gmt2kml.c:		Removed additional > in </ExtendedData>>.

2009-10-04	pwessel
	* gmt_init.c:		Opened file with fopen but closed with GMT_fclose.
	* gmt_mgg_header2.c:	Opened file with GMT_fopen but closed with fclose.

2009-10-03	pwessel		
				GMT 5 branch tag set: GMT5_branch

2009-10-01	pwessel
	* psrose.c:		Needed to set scale to 1 so the bounding box